@@ -1,3 +1,5 @@
+ change: unused node garbage collection made a little more aggressive (max. 3 unused channels per channel search instead of 1)
+ fix: unused nodes were deleted only on channel id hash collision (very rare)
 0.681 (Nov. 6 2009)
  feature: added push_message_buffer_length setting, which sets push_message_max_buffer_length and push_message_min_buffer_length at once.
  fix: publisher channel info text/json response now uses double quotes instead of single.
